--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,8 +9,10 @@
 
 <body>
     <h1>The results will be displayed below</h1>
+    <button class="end">Stop recording</button>
     <div class="words" contenteditable>
     </div>
+
 </body>
 <script src="index.js"></script>
 
