switch between eng and rus

--- a/DOMManipulation/index.html
+++ b/DOMManipulation/index.html
@@ -9,9 +9,12 @@
 
 <body>
     <h1>The results will be displayed below</h1>
+    <button id="en" class="start-en">Record in English</button>
+    <button id="ru" class="start-ru">Record in Russian</button>
     <button class="end">Stop recording</button>
-    <div class="words" contenteditable>
+    <div class="words">
     </div>
+
 
 </body>
 <script src="index.js"></script>
